# doc-search

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
app/: assistant.py  models.py  tasks.py  utils.py
app/api/v1/: serializers.py  urls.py  views.py
app/grafql_api/: schema.py  types.py
app/grafql_api/mutations/: document.py  keys.py  users.py
app/grafql_api/queries/: __init__.py  analytics.py  documents.py  keys.py  questions.py  users.py
app/migrations/: 0001_initial.py  0002_alter_documents_document.py  0003_alter_documents_document.py  0004_alter_documents_document.py  0005_alter_documents_document.py  0006_documents_created_at_documents_title.py  0007_alter_documents_created_at.py  0008_documents_owner.py  0009_alter_documents_title.py  0010_create_userkeys.py  0011_questionsamount.py  0012_questions_delete_questionsamount.py
app/tests/: base.py  queries.py  test_documents.py  test_keys.py  test_questions.py  test_user.py
doc_search/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
