[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["Vlad <vladislav.sytyuk@gmail.com>"]
readme = "README.md"
packages = [{include = "test_task"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.5"
mysqlclient = "^2.2.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
